# telegram-message-source

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: before-build-linux.sh  install-openssl.sh
.github/workflows/: beta.yml  build.yml  pre-release.yml  release.yml
locales/: TODO.en-US.yml  TODO.zh-CN.yml  en-US.yml  zh-CN.yml
res/: server-cert.pem  server-key.pem
src/: bot.rs  command.rs  config.rs  cover.rs  data.rs  despatch.rs  dispatch.rs  ext.rs  i18n.rs  log.rs  main.rs  message.rs  net.rs  update.rs  webhook.rs
src/commands/: bind.rs  manage.rs  mod.rs
src/ext/: db.rs  err.rs  mod.rs
src/handlers/: receive.rs  send.rs
src/message/: handler.rs  mod.rs
src/message/handlers/: mod.rs  receive.rs  send.rs
