[package]
name = "msgist-tg"
version = "1.7.0-rc1"
authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[features]
default = ["default-monolith"]
default-monolith = ["monolith","color"]
default-polylith = ["polylith","color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]
monolith = []
polylith = ["tracing-opentelemetry","opentelemetry","opentelemetry-jaeger","axum"]
beta = []

[dependencies]
# bot
teloxide = { version = "0.10.1", default-features = false, features = ["macros", "auto-send","ctrlc_handler","rustls","nightly", "webhooks-axum"] }
teloxide-core = { version = "0.7.1", default-features = false, features = ["rustls", "cache_me"] }
teloxide-macros = "0.6.3"

# polylith
tracing-opentelemetry = { version = "0.17.4", optional = true }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"], optional = true }
axum = { version = "0.5.16", optional = true }

# mesagisto
# mesagisto-client = { branch = "next", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
# automatic-config = { path = "/home/itsusinn/Workspace/Code/automatic-config-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
singleton = { branch= "master", git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }

# logging
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
colored = "2.0.0"
time = { version = "0.3.14", features = ["macros", "local-offset"] }
chrono = "0.4.22"

# serialization
serde = { version = "1.0.144", default-features = false, features = ["derive","rc"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"

# asynchronous
tokio = { version = "1.21.1", default-features = false, features = ["macros","signal","rt-multi-thread"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.10"
futures = "0.3.24"
async-trait = "0.1.57"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots","stream","multipart", "blocking"] }

# error handling
thiserror = "1.0.35"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
color-spantrace = "0.2.0"

# encoding and decoding
base64-url = "1.4.13"
# hex = "0.4"

# crypto
aes-gcm = { version = "0.10.1", features = ["std"] }

# tools
dashmap = { version = "5.4.0", features = ["serde"] }
once_cell = "1.14.0"
educe = { version = "0.4.19", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.4", features = ["serde"] }
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
either = "1.8.0"
mime = "0.3.16"
infer = "0.9.0"
uuid = "1.1.2"
# self_update = { path = "/home/itsusinn/Workspace/Clone/self_update", features = ["archive-zip","compression-zip-deflate","rustls"] }
self_update = { branch = "dirty-feat", git = "https://github.com/Itsusinn/self_update.git", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }

# database
sled = "0.34.7"

# i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
locale_config = "0.3.0"
[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"

