[package]
name = "msgist-tg"
version = "1.7.0-rc"
authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]
# bot
teloxide = { version = "0.11.1", default-features = false, features = ["macros", "auto-send","ctrlc_handler","rustls","nightly", "webhooks-axum"] }
teloxide-core = { version = "0.8.0", default-features = false, features = ["rustls", "cache_me"] }
teloxide-macros = "0.7.0"

# mesagisto
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
# mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
# automatic-config = { path = "/home/itsusinn/Workspace/Code/automatic-config-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
singleton = { branch= "master", git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
colored = "2.0.0"
time = { version = "0.3.17", features = ["macros", "local-offset"] }
chrono = "0.4.23"

# serialization
serde = { version = "1.0.147", default-features = false, features = ["derive","rc"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"

# asynchronous
tokio = { version = "1.21.2", default-features = false, features = ["macros","signal","rt-multi-thread"] }
tokio-stream = "0.1.11"
futures-util = "0.3.25"
async-trait = "0.1.58"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls","rustls-tls-native-roots","stream","multipart", "blocking"] }

# error handling
thiserror = "1.0.37"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
color-spantrace = "0.2.0"

# encoding and decoding
base64-url = "1.4.13"
image = { version = "0.24.5", features = ["webp-encoder"] }
# hex = "0.4"

# crypto
aes-gcm = { version = "0.10.1", features = ["std"] }

# tools
dashmap = { version = "5.4.0", features = ["serde"] }
once_cell = "1.16.0"
educe = { version = "0.4.20", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.5", features = ["serde"] }
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
either = "1.8.0"
mime = "0.3.16"
infer = "0.11.0"
uuid = "1.2.2"
# self_update = { path = "/home/itsusinn/Workspace/Clone/self_update", features = ["archive-zip","compression-zip-deflate","rustls"] }
self_update = { branch = "proxy", git = "https://github.com/Itsusinn/self_update.git", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }

# database
sled = "0.34.7"

# i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
locale_config = "0.3.0"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"

